--- a/locales/bg-BG/translation.json
+++ b/locales/bg-BG/translation.json
@@ -123,6 +123,7 @@
   "Edit": "Edit",
   "Edit contact": "Edit contact",
   "Enable developer tools": "Enable developer tools",
+  "Encountered error while calling the faucet. Please try again in a few minutes.": "Encountered error while calling the faucet. Please try again in a few minutes.",
   "Encountered error while exporting your transactions.": "Encountered error while exporting your transactions.",
   "Encountered error while synching your addresses' data.": "Encountered error while synching your addresses' data.",
   "Enter": "Въведи",
@@ -266,6 +267,8 @@
   "Raw amount": "Raw amount",
   "Ready!": "Готови!",
   "Receive": "Получаване",
+  "Receive testnet tokens": "Receive testnet tokens",
+  "Receive testnet tokens in your default address.": "Receive testnet tokens in your default address.",
   "Received": "Получено",
   "Recipient's address": "Адрес на получател",
   "Refresh": "Обнови",
@@ -339,6 +342,8 @@
   "Tab navigation": "Навигация в раздели",
   "Tell us!": "Кажете ни!",
   "Testnet": "Testnet",
+  "Testnet faucet": "Testnet faucet",
+  "Testnet tokens incoming.": "'Testnet tokens incoming.",
   "The amount must be greater than {{ minAmount }}": "Сумата трябва да е по-голяма от {{ minAmount }}",
   "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})",
   "The easiest way to get started with Alephium.": "Най-лесният начин да започнете работа с Alephium.",
@@ -415,6 +420,7 @@
   "welcomeScreenOneAddressPerGroupMessage": "Напреднал потребител: искате да започнете с <1>един адрес на група за добив или DeFi?</1>",
   "welcomeScreenPassphraseMessage": "Ако искате да използвате <1>passphrase</1>, заключете новосъздадения си портфейл.",
   "with": "with",
+  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.",
   "You can disable this confirmation step from the wallet settings.": "You can disable this confirmation step from the wallet settings.",
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "You can download the address transaction history for a selected time period. This can be useful for tax reporting.",
   "You have great ideas you want to share?": "Имате страхотни идеи, които искате да споделите?",
