--- a/locales/es-ES/translation.json
+++ b/locales/es-ES/translation.json
@@ -123,6 +123,7 @@
   "Edit": "Edit",
   "Edit contact": "Edit contact",
   "Enable developer tools": "Enable developer tools",
+  "Encountered error while calling the faucet. Please try again in a few minutes.": "Encountered error while calling the faucet. Please try again in a few minutes.",
   "Encountered error while exporting your transactions.": "Encountered error while exporting your transactions.",
   "Encountered error while synching your addresses' data.": "Encountered error while synching your addresses' data.",
   "Enter": "Introduzca",
@@ -266,6 +267,8 @@
   "Raw amount": "Raw amount",
   "Ready!": "¡Listo!",
   "Receive": "Receber",
+  "Receive testnet tokens": "Receive testnet tokens",
+  "Receive testnet tokens in your default address.": "Receive testnet tokens in your default address.",
   "Received": "Recibido",
   "Recipient's address": "Dirección del destinatario",
   "Refresh": "Actualizar",
@@ -339,6 +342,8 @@
   "Tab navigation": "Navegación por pestañas",
   "Tell us!": "¡Cuéntanoslo!",
   "Testnet": "Testnet",
+  "Testnet faucet": "Testnet faucet",
+  "Testnet tokens incoming.": "'Testnet tokens incoming.",
   "The amount must be greater than {{ minAmount }}": "El monto debe ser superior a {{ minAmount }}",
   "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})",
   "The easiest way to get started with Alephium.": "La manera más fácil de empezar con Alephium.",
@@ -415,6 +420,7 @@
   "welcomeScreenOneAddressPerGroupMessage": "Usuario avanzado: ¿desea empezar con <1> una dirección por grupo para minería o DeFi?</1>",
   "welcomeScreenPassphraseMessage": "Si desea utilizar una <1>frase</1>, cierre la billetera recién creada.",
   "with": "with",
+  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.",
   "You can disable this confirmation step from the wallet settings.": "You can disable this confirmation step from the wallet settings.",
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "You can download the address transaction history for a selected time period. This can be useful for tax reporting.",
   "You have great ideas you want to share?": "¿Tienes buenas ideas que quieres compartir?",
