--- a/locales/ru-RU/translation.json
+++ b/locales/ru-RU/translation.json
@@ -123,6 +123,7 @@
   "Edit": "Edit",
   "Edit contact": "Edit contact",
   "Enable developer tools": "Enable developer tools",
+  "Encountered error while calling the faucet. Please try again in a few minutes.": "Encountered error while calling the faucet. Please try again in a few minutes.",
   "Encountered error while exporting your transactions.": "Encountered error while exporting your transactions.",
   "Encountered error while synching your addresses' data.": "Encountered error while synching your addresses' data.",
   "Enter": "Ввести",
@@ -266,6 +267,8 @@
   "Raw amount": "Raw amount",
   "Ready!": "Готов!",
   "Receive": "Получить",
+  "Receive testnet tokens": "Receive testnet tokens",
+  "Receive testnet tokens in your default address.": "Receive testnet tokens in your default address.",
   "Received": "Получено",
   "Recipient's address": "Адрес получателя",
   "Refresh": "Обновить",
@@ -339,6 +342,8 @@
   "Tab navigation": "Вкладка навигации",
   "Tell us!": "Расскажите нам!",
   "Testnet": "Testnet",
+  "Testnet faucet": "Testnet faucet",
+  "Testnet tokens incoming.": "'Testnet tokens incoming.",
   "The amount must be greater than {{ minAmount }}": "Сумма должна быть больше, чем {{ minAmount }}",
   "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})",
   "The easiest way to get started with Alephium.": "Самый простой способ начать работу с Alephium.",
@@ -415,6 +420,7 @@
   "welcomeScreenOneAddressPerGroupMessage": "Продвинутый пользователь: вы хотите начать с <1> одного адреса для группы для майнинга или DeFi?</1>",
   "welcomeScreenPassphraseMessage": "Если вы хотите использовать <1>passphrase</1>, заблокируйте только что созданный кошелек.",
   "with": "with",
+  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.",
   "You can disable this confirmation step from the wallet settings.": "You can disable this confirmation step from the wallet settings.",
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "You can download the address transaction history for a selected time period. This can be useful for tax reporting.",
   "You have great ideas you want to share?": "У вас есть отличные идеи, которыми вы хотите поделиться?",
