--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -123,6 +123,7 @@
   "Edit": "Edit",
   "Edit contact": "Edit contact",
   "Enable developer tools": "Enable developer tools",
+  "Encountered error while calling the faucet. Please try again in a few minutes.": "Encountered error while calling the faucet. Please try again in a few minutes.",
   "Encountered error while exporting your transactions.": "Encountered error while exporting your transactions.",
   "Encountered error while synching your addresses' data.": "Encountered error while synching your addresses' data.",
   "Enter": "Đồng ý",
@@ -266,6 +267,8 @@
   "Raw amount": "Raw amount",
   "Ready!": "Bắt đầu!",
   "Receive": "Nhận",
+  "Receive testnet tokens": "Receive testnet tokens",
+  "Receive testnet tokens in your default address.": "Receive testnet tokens in your default address.",
   "Received": "Đã nhận",
   "Recipient's address": "Địa chỉ ví của người nhận",
   "Refresh": "Làm mới",
@@ -339,6 +342,8 @@
   "Tab navigation": "Tab điều hướng",
   "Tell us!": "Hãy cho chúng tôi biết!",
   "Testnet": "Testnet",
+  "Testnet faucet": "Testnet faucet",
+  "Testnet tokens incoming.": "'Testnet tokens incoming.",
   "The amount must be greater than {{ minAmount }}": "Số lượng phải lớn hơn hoặc bằng {{ minAmount }}",
   "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})",
   "The easiest way to get started with Alephium.": "Các đơn giản nhất để bắt đầu với Alephium",
@@ -415,6 +420,7 @@
   "welcomeScreenOneAddressPerGroupMessage": "Người dùng nâng cao: Bạn muốn bắt đầu với <1>một địa chỉ ví trên nhóm dành cho thợ đào hoặc DeFi?</1>",
   "welcomeScreenPassphraseMessage": "Nếu bạn muốn sử dụng một <1>passphrase</1>, khoá ví vừa mới tạo.",
   "with": "with",
+  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.",
   "You can disable this confirmation step from the wallet settings.": "You can disable this confirmation step from the wallet settings.",
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "You can download the address transaction history for a selected time period. This can be useful for tax reporting.",
   "You have great ideas you want to share?": "Bạn muốn đóng góp ý tưởng cho chúng tôi?",
