--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -123,6 +123,7 @@
   "Edit": "Edit",
   "Edit contact": "Edit contact",
   "Enable developer tools": "Enable developer tools",
+  "Encountered error while calling the faucet. Please try again in a few minutes.": "Encountered error while calling the faucet. Please try again in a few minutes.",
   "Encountered error while exporting your transactions.": "Encountered error while exporting your transactions.",
   "Encountered error while synching your addresses' data.": "Encountered error while synching your addresses' data.",
   "Enter": "Eingabe",
@@ -266,6 +267,8 @@
   "Raw amount": "Raw amount",
   "Ready!": "Bereit!",
   "Receive": "Empfangen",
+  "Receive testnet tokens": "Receive testnet tokens",
+  "Receive testnet tokens in your default address.": "Receive testnet tokens in your default address.",
   "Received": "Empfangen",
   "Recipient's address": "Adresse des Empfängers",
   "Refresh": "Aktualisieren",
@@ -339,6 +342,8 @@
   "Tab navigation": "Registerkarte Navigation",
   "Tell us!": "Sagen Sie es uns!",
   "Testnet": "Testnet",
+  "Testnet faucet": "Testnet faucet",
+  "Testnet tokens incoming.": "'Testnet tokens incoming.",
   "The amount must be greater than {{ minAmount }}": "Der Betrag muss größer als {{ minAmount }} sein",
   "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})",
   "The easiest way to get started with Alephium.": "Der einfachste Weg, mit Alephium zu beginnen.",
@@ -415,6 +420,7 @@
   "welcomeScreenOneAddressPerGroupMessage": "Fortgeschrittener Benutzer: Möchten Sie mit <1>einer Adresse pro Gruppe für Mining oder DeFi beginnen?</1>",
   "welcomeScreenPassphraseMessage": "Wenn Sie eine <1>Passphrase</1> verwenden möchten, sperren Sie Ihre neu erstellte Wallet.",
   "with": "with",
+  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.",
   "You can disable this confirmation step from the wallet settings.": "You can disable this confirmation step from the wallet settings.",
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "You can download the address transaction history for a selected time period. This can be useful for tax reporting.",
   "You have great ideas you want to share?": "Sie haben tolle Ideen, die Sie mit uns teilen möchten?",
