--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -121,6 +121,7 @@
   "Edit": "Edit",
   "Edit contact": "Edit contact",
   "Enable developer tools": "Enable developer tools",
+  "Encountered error while calling the faucet. Please try again in a few minutes.": "Encountered error while calling the faucet. Please try again in a few minutes.",
   "Encountered error while exporting your transactions.": "Encountered error while exporting your transactions.",
   "Encountered error while synching your addresses' data.": "Encountered error while synching your addresses' data.",
   "Enter": "Enter",
@@ -147,8 +148,8 @@
   "Features for developers only": "Features for developers only",
   "Fee": "Fee",
   "For mining or DeFi use.": "For mining or DeFi use.",
-  "from": "from",
   "From": "From",
+  "from": "from",
   "From address": "From address",
   "Gas": "Gas",
   "Gas amount": "Gas amount",
@@ -264,6 +265,8 @@
   "Raw amount": "Raw amount",
   "Ready!": "Ready!",
   "Receive": "Receive",
+  "Receive testnet tokens": "Receive testnet tokens",
+  "Receive testnet tokens in your default address.": "Receive testnet tokens in your default address.",
   "Received": "Received",
   "Recipient's address": "Recipient's address",
   "Refresh": "Refresh",
@@ -337,6 +340,8 @@
   "Tab navigation": "Tab navigation",
   "Tell us!": "Tell us!",
   "Testnet": "Testnet",
+  "Testnet faucet": "Testnet faucet",
+  "Testnet tokens incoming.": "'Testnet tokens incoming.",
   "The amount must be greater than {{ minAmount }}": "The amount must be greater than {{ minAmount }}",
   "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})",
   "The easiest way to get started with Alephium.": "The easiest way to get started with Alephium.",
@@ -355,8 +360,8 @@
   "This year": "This year",
   "Time period": "Time period",
   "Timestamp": "Timestamp",
-  "to": "to",
   "To": "To",
+  "to": "to",
   "To address": "To address",
   "To remove this address from being the default address, you must set another one as default first.": "To remove this address from being the default address, you must set another one as default first.",
   "Toggle discreet mode (hide amounts).": "Toggle discreet mode (hide amounts).",
@@ -413,6 +418,7 @@
   "welcomeScreenOneAddressPerGroupMessage": "Advanced user: want to start with <1>one address per group for mining or DeFi?</1>",
   "welcomeScreenPassphraseMessage": "If you want to use a <1>passphrase</1>, lock your newly created wallet.",
   "with": "with",
+  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.",
   "You can disable this confirmation step from the wallet settings.": "You can disable this confirmation step from the wallet settings.",
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "You can download the address transaction history for a selected time period. This can be useful for tax reporting.",
   "You have great ideas you want to share?": "You have great ideas you want to share?",
