--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -123,6 +123,7 @@
   "Edit": "Éditer",
   "Edit contact": "Éditer le contact",
   "Enable developer tools": "Activer les outils pour développeurs",
+  "Encountered error while calling the faucet. Please try again in a few minutes.": "Encountered error while calling the faucet. Please try again in a few minutes.",
   "Encountered error while exporting your transactions.": "Erreur durant l'export des transactions.",
   "Encountered error while synching your addresses' data.": "Erreur lors de la synchronisation des données de vos adresses.",
   "Enter": "Entrer",
@@ -266,6 +267,8 @@
   "Raw amount": "Montant brut",
   "Ready!": "C'est parti !",
   "Receive": "Recevoir",
+  "Receive testnet tokens": "Receive testnet tokens",
+  "Receive testnet tokens in your default address.": "Receive testnet tokens in your default address.",
   "Received": "Reçu",
   "Recipient's address": "Adresse du destinataire",
   "Refresh": "Rafraîchir",
@@ -339,6 +342,8 @@
   "Tab navigation": "Navigation par tab",
   "Tell us!": "Dites-nous!",
   "Testnet": "Testnet",
+  "Testnet faucet": "Testnet faucet",
+  "Testnet tokens incoming.": "'Testnet tokens incoming.",
   "The amount must be greater than {{ minAmount }}": "Le montant doit être supérieur à {{ minAmount }}",
   "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "Le réseau actuel ({{ currentNetwork }}) ne correspond pas au réseau demandé par WalletConnect ({{ walletConnectNetwork }})",
   "The easiest way to get started with Alephium.": "Le moyen le plus simple de commencer avec Alephium.",
@@ -415,6 +420,7 @@
   "welcomeScreenOneAddressPerGroupMessage": "Utilisateur avancé : vous voulez commencer avec <1>une adresse par groupe pour le minage ou la DeFi?</1>",
   "welcomeScreenPassphraseMessage": "Si vous désirez utiliser une <1>phrase de passe</1>, verrouillez votre portefeuille fraîchement créé.",
   "with": "avec",
+  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.",
   "You can disable this confirmation step from the wallet settings.": "Vous pouvez désactiver cette étape de confirmation dans les paramètres du portefeuille.",
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "Vous pouvez télécharger l'historique des transactions pour cette adresse sur une période de temps donnée. Cela peut être utile pour vos impôts.",
   "You have great ideas you want to share?": "Vous avez de supers idées à partager ?",
