--- a/locales/tr-TR/translation.json
+++ b/locales/tr-TR/translation.json
@@ -123,6 +123,7 @@
   "Edit": "Edit",
   "Edit contact": "Edit contact",
   "Enable developer tools": "Enable developer tools",
+  "Encountered error while calling the faucet. Please try again in a few minutes.": "Encountered error while calling the faucet. Please try again in a few minutes.",
   "Encountered error while exporting your transactions.": "Encountered error while exporting your transactions.",
   "Encountered error while synching your addresses' data.": "Encountered error while synching your addresses' data.",
   "Enter": "Giriş",
@@ -266,6 +267,8 @@
   "Raw amount": "Raw amount",
   "Ready!": "Hazır!",
   "Receive": "Al",
+  "Receive testnet tokens": "Receive testnet tokens",
+  "Receive testnet tokens in your default address.": "Receive testnet tokens in your default address.",
   "Received": "Alındı",
   "Recipient's address": "Alıcının adresi",
   "Refresh": "Yenile",
@@ -339,6 +342,8 @@
   "Tab navigation": "Navigasyon sekmesi",
   "Tell us!": "Bize bahsedin!",
   "Testnet": "Testnet",
+  "Testnet faucet": "Testnet faucet",
+  "Testnet tokens incoming.": "'Testnet tokens incoming.",
   "The amount must be greater than {{ minAmount }}": "Miktar {{ minAmount }} adetten daha fazla olmalıdır.",
   "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})",
   "The easiest way to get started with Alephium.": "Alephium ile başlamanın en kolay yolu.",
@@ -415,6 +420,7 @@
   "welcomeScreenOneAddressPerGroupMessage": "Gelişmiş kullanıcı: <1>her bir gruba madencilik ya da defi için bir adres</1> ile başlamak ister misiniz?",
   "welcomeScreenPassphraseMessage": "Eğer <1>kurtarma sözcüklerini</1> kullanmak istiyorsanız, yeni oluşturduğunuz cüzdanı kilitleyin.",
   "with": "with",
+  "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.": "You are currently connected to the {{ currentNetwork }} network. Make sure to connect to the testnet network to see your tokens.",
   "You can disable this confirmation step from the wallet settings.": "You can disable this confirmation step from the wallet settings.",
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "You can download the address transaction history for a selected time period. This can be useful for tax reporting.",
   "You have great ideas you want to share?": "Harika fikirleriniz mi var, paylaşmak ister misiniz?",
