--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -421,5 +421,6 @@
   "Your addresses": "Ihre Adressen",
   "Your CSV file has been generated successfully.": "Your CSV file has been generated successfully.",
   "Your CSV file is being compiled in the background.": "Your CSV file is being compiled in the background.",
-  "Your Wallet": "Ihre Wallet"
+  "Your Wallet": "Ihre Wallet",
+  "Click to deactivate discreet mode": "Click to deactivate discreet mode"
 }
