--- a/locales/pt-PT/translation.json
+++ b/locales/pt-PT/translation.json
@@ -421,5 +421,6 @@
   "Your addresses": "Your addresses",
   "Your CSV file has been generated successfully.": "Your CSV file has been generated successfully.",
   "Your CSV file is being compiled in the background.": "Your CSV file is being compiled in the background.",
-  "Your Wallet": "A sua carteira"
+  "Your Wallet": "A sua carteira",
+  "Click to deactivate discreet mode": "Click to deactivate discreet mode"
 }
