--- a/locales/id-ID/translation.json
+++ b/locales/id-ID/translation.json
@@ -308,7 +308,7 @@
   "Enter your password to copy the private key.": "Masukkan kata sandi Anda untuk menyalin kunci pribadi tersebut.",
   "Expand": "Perluas",
   "Export": "Ekspor",
-  "Export address transactions": "Export address transactions",
+  "Export address transactions": "Ekspor alamat transaksi",
   "Export current wallet": "Ekspor dompet sekarang",
   "Export wallet": "Ekspor dompet",
   "Features for developers only": "Fitur tersebut khusus untuk pengembang saja",
@@ -389,8 +389,8 @@
   "Unknown token": "Token tidak dikenal",
   "Unknown tokens": "Token tidak dikenal",
   "Unlock": "Buka Kunci",
-  "Unlock a wallet to connect to dApp: {{ dAppName }}": "Unlock a wallet to connect to dApp: {{ dAppName }}",
-  "Unlock a wallet to continue.": "Unlock a wallet to continue.",
+  "Unlock a wallet to connect to dApp: {{ dAppName }}": "Buka kunci dompet untuk terhubung ke dApp: {{ dAppName }}",
+  "Unlock a wallet to continue.": "Buka kunci dompet untuk melanjutkan.",
   "Unlock your wallet to connect to dApp: {{ dAppName }}": "Buka kunci dompet untuk terhubung ke dApp: {{ dAppName }}",
   "Unlock your wallet to continue.": "Buka kunci dompet untuk melanjutkan.",
   "Unselect all": "Batalkan semua pilihan",
