--- a/locales/bg-BG/translation.json
+++ b/locales/bg-BG/translation.json
@@ -343,7 +343,7 @@
   "Tell us!": "Кажете ни!",
   "Testnet": "Testnet",
   "Testnet faucet": "Testnet faucet",
-  "Testnet tokens incoming.": "'Testnet tokens incoming.",
+  "Testnet tokens incoming.": "Testnet tokens incoming.",
   "The amount must be greater than {{ minAmount }}": "Сумата трябва да е по-голяма от {{ minAmount }}",
   "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})",
   "The easiest way to get started with Alephium.": "Най-лесният начин да започнете работа с Alephium.",
