--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -343,7 +343,7 @@
   "Tell us!": "Sagen Sie es uns!",
   "Testnet": "Testnet",
   "Testnet faucet": "Testnet faucet",
-  "Testnet tokens incoming.": "'Testnet tokens incoming.",
+  "Testnet tokens incoming.": "Testnet tokens incoming.",
   "The amount must be greater than {{ minAmount }}": "Der Betrag muss größer als {{ minAmount }} sein",
   "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})",
   "The easiest way to get started with Alephium.": "Der einfachste Weg, mit Alephium zu beginnen.",
