--- a/locales/tr-TR/translation.json
+++ b/locales/tr-TR/translation.json
@@ -343,7 +343,7 @@
   "Tell us!": "Bize bahsedin!",
   "Testnet": "Testnet",
   "Testnet faucet": "Testnet faucet",
-  "Testnet tokens incoming.": "'Testnet tokens incoming.",
+  "Testnet tokens incoming.": "Testnet tokens incoming.",
   "The amount must be greater than {{ minAmount }}": "Miktar {{ minAmount }} adetten daha fazla olmalıdır.",
   "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})": "The current network ({{ currentNetwork }}) does not match the network requested by WalletConnect ({{ walletConnectNetwork }})",
   "The easiest way to get started with Alephium.": "Alephium ile başlamanın en kolay yolu.",
