Add faucet TX to pending transactions. More error messages.
Note: there was a newline at the end of the testnet call response.
This made the regex and my brain useless for a little while.

--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -123,7 +123,7 @@
   "Edit": "Éditer",
   "Edit contact": "Éditer le contact",
   "Enable developer tools": "Activer les outils pour développeurs",
-  "Encountered error while calling the faucet. Please try again in a few minutes.": "Encountered error while calling the faucet. Please try again in a few minutes.",
+  "Encountered error while calling the faucet.": "Encountered error while calling the faucet.",
   "Encountered error while exporting your transactions.": "Erreur durant l'export des transactions.",
   "Encountered error while synching your addresses' data.": "Erreur lors de la synchronisation des données de vos adresses.",
   "Enter": "Entrer",
@@ -425,6 +425,7 @@
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "Vous pouvez télécharger l'historique des transactions pour cette adresse sur une période de temps donnée. Cela peut être utile pour vos impôts.",
   "You have great ideas you want to share?": "Vous avez de supers idées à partager ?",
   "You have questions about transfers ? Click here!": "Des questions à propos des transfers ? Cliquez ici.",
+  "You have reached the maximum calls limit. Please try again in a few minutes.": "You have reached the maximum calls limit. Please try again in a few minutes.",
   "You will not be able to recover your account with the private key!": "Vous ne serez pas en mesure de récupérer votre portefeuille avec la clé privée !",
   "Your address": "Votre adresse",
   "Your addresses": "Vos adresses",
