--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -123,7 +123,7 @@
   "Edit": "Edit",
   "Edit contact": "Edit contact",
   "Enable developer tools": "Enable developer tools",
-  "Encountered error while calling the faucet. Please try again in a few minutes.": "Encountered error while calling the faucet. Please try again in a few minutes.",
+  "Encountered error while calling the faucet.": "Encountered error while calling the faucet.",
   "Encountered error while exporting your transactions.": "Encountered error while exporting your transactions.",
   "Encountered error while synching your addresses' data.": "Encountered error while synching your addresses' data.",
   "Enter": "Đồng ý",
@@ -425,6 +425,7 @@
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "You can download the address transaction history for a selected time period. This can be useful for tax reporting.",
   "You have great ideas you want to share?": "Bạn muốn đóng góp ý tưởng cho chúng tôi?",
   "You have questions about transfers ? Click here!": "You have questions about transfers ? Click here!",
+  "You have reached the maximum calls limit. Please try again in a few minutes.": "You have reached the maximum calls limit. Please try again in a few minutes.",
   "You will not be able to recover your account with the private key!": "You will not be able to recover your account with the private key!",
   "Your address": "Địa chỉ ví của bạn",
   "Your addresses": "Your addresses",
