--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -121,7 +121,7 @@
   "Edit": "Edit",
   "Edit contact": "Edit contact",
   "Enable developer tools": "Enable developer tools",
-  "Encountered error while calling the faucet. Please try again in a few minutes.": "Encountered error while calling the faucet. Please try again in a few minutes.",
+  "Encountered error while calling the faucet.": "Encountered error while calling the faucet.",
   "Encountered error while exporting your transactions.": "Encountered error while exporting your transactions.",
   "Encountered error while synching your addresses' data.": "Encountered error while synching your addresses' data.",
   "Enter": "Enter",
@@ -148,8 +148,8 @@
   "Features for developers only": "Features for developers only",
   "Fee": "Fee",
   "For mining or DeFi use.": "For mining or DeFi use.",
-  "From": "From",
   "from": "from",
+  "From": "From",
   "From address": "From address",
   "Gas": "Gas",
   "Gas amount": "Gas amount",
@@ -360,8 +360,8 @@
   "This year": "This year",
   "Time period": "Time period",
   "Timestamp": "Timestamp",
-  "To": "To",
   "to": "to",
+  "To": "To",
   "To address": "To address",
   "To remove this address from being the default address, you must set another one as default first.": "To remove this address from being the default address, you must set another one as default first.",
   "Toggle discreet mode (hide amounts).": "Toggle discreet mode (hide amounts).",
@@ -423,6 +423,7 @@
   "You can download the address transaction history for a selected time period. This can be useful for tax reporting.": "You can download the address transaction history for a selected time period. This can be useful for tax reporting.",
   "You have great ideas you want to share?": "You have great ideas you want to share?",
   "You have questions about transfers ? Click here!": "You have questions about transfers ? Click here!",
+  "You have reached the maximum calls limit. Please try again in a few minutes.": "You have reached the maximum calls limit. Please try again in a few minutes.",
   "You will not be able to recover your account with the private key!": "You will not be able to recover your account with the private key!",
   "Your address": "Your address",
   "Your addresses": "Your addresses",
