--- a/locales/bg-BG/translation.json
+++ b/locales/bg-BG/translation.json
@@ -25,6 +25,7 @@
   "Alephium": "Алефиум",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium няма достъп до вашия портфейл.Вие сте единственият собственик.",
   "Alephium Logo": "Лого на Алефиум",
+  "Alephium's services": "Alephium's services",
   "all": "всички",
   "All good? Let's continue!": "Всичко е наред? Да продължим!",
   "All selected": "All selected",
@@ -103,6 +104,7 @@
   "Current wallet": "Текущ портфейл",
   "Custom": "Персонализиран",
   "Custom network settings saved.": "Потребителските настройки на мрежата са запазени.",
+  "Custom proxy": "Custom proxy",
   "Dark": "Dark",
   "Default address": "Адрес по подразбиране",
   "Default address for sending transactions.": "Адрес по подразбиране за изпращане на транзакции.",
