--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -23,6 +23,7 @@
   "Alephium": "Alephium",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium doesn't have access to your wallet.\nYou are the only owner.",
   "Alephium Logo": "Alephium Logo",
+  "Alephium's services": "Alephium's services",
   "all": "all",
   "All good? Let's continue!": "All good? Let's continue!",
   "All selected": "All selected",
@@ -101,6 +102,7 @@
   "Current wallet": "Current wallet",
   "Custom": "Custom",
   "Custom network settings saved.": "Custom network settings saved.",
+  "Custom proxy": "Custom proxy",
   "Dark": "Dark",
   "Default address": "Default address",
   "Default address for sending transactions.": "Default address for sending transactions.",
@@ -147,8 +149,8 @@
   "Features for developers only": "Features for developers only",
   "Fee": "Fee",
   "For mining or DeFi use.": "For mining or DeFi use.",
-  "from": "from",
   "From": "From",
+  "from": "from",
   "From address": "From address",
   "Gas": "Gas",
   "Gas amount": "Gas amount",
@@ -355,8 +357,8 @@
   "This year": "This year",
   "Time period": "Time period",
   "Timestamp": "Timestamp",
-  "to": "to",
   "To": "To",
+  "to": "to",
   "To address": "To address",
   "To remove this address from being the default address, you must set another one as default first.": "To remove this address from being the default address, you must set another one as default first.",
   "Toggle discreet mode (hide amounts).": "Toggle discreet mode (hide amounts).",
