--- a/locales/es-ES/translation.json
+++ b/locales/es-ES/translation.json
@@ -25,6 +25,7 @@
   "Alephium": "Alephium",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium no tiene acceso a su cartera.\nUsted es el único propietario.",
   "Alephium Logo": "Logotipo Alephium",
+  "Alephium's services": "Alephium's services",
   "all": "todas",
   "All good? Let's continue!": "¿Todo bien? ¡Continuemos!",
   "All selected": "All selected",
@@ -103,6 +104,7 @@
   "Current wallet": "Monedero actual",
   "Custom": "Personalizar",
   "Custom network settings saved.": "Configuración de red personalizada guardada.",
+  "Custom proxy": "Custom proxy",
   "Dark": "Dark",
   "Default address": "Dirección predeterminada",
   "Default address for sending transactions.": "Dirección predeterminada para el envío de transacciones.",
