--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -25,6 +25,7 @@
   "Alephium": "Alephium",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium n'a pas accès à votre portefeuille.\nVous êtes le seul propriétaire.",
   "Alephium Logo": "Logo Alephium",
+  "Alephium's services": "Alephium's services",
   "all": "tous",
   "All good? Let's continue!": "Tout bon ? Continuons !",
   "All selected": "Tous",
@@ -103,6 +104,7 @@
   "Current wallet": "Portefeuille actif",
   "Custom": "Personnalisé",
   "Custom network settings saved.": "Paramètres de réseau enregistrés.",
+  "Custom proxy": "Custom proxy",
   "Dark": "Sombre",
   "Default address": "Adresse par défaut",
   "Default address for sending transactions.": "Adresse par défaut pour effectuer des transactions.",
