--- a/locales/pt-PT/translation.json
+++ b/locales/pt-PT/translation.json
@@ -25,6 +25,7 @@
   "Alephium": "Alephium",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "A Alephium não tem acesso à sua carteira.\nÉ o único proprietário.",
   "Alephium Logo": "Logo Alephium",
+  "Alephium's services": "Alephium's services",
   "all": "todas",
   "All good? Let's continue!": "Tudo bem? Vamos continuar!",
   "All selected": "All selected",
@@ -103,6 +104,7 @@
   "Current wallet": "Carteira atual",
   "Custom": "Personalizar",
   "Custom network settings saved.": "Definições de rede personalizadas guardadas.",
+  "Custom proxy": "Custom proxy",
   "Dark": "Dark",
   "Default address": "Endereço predefinido",
   "Default address for sending transactions.": "Endereço por defeito para o envio de transações.",
