--- a/locales/ru-RU/translation.json
+++ b/locales/ru-RU/translation.json
@@ -25,6 +25,7 @@
   "Alephium": "Alephium",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium не имеет доступа к вашему кошельку.\nВы единственный владелец.",
   "Alephium Logo": "Логотип Alephium",
+  "Alephium's services": "Alephium's services",
   "all": "все",
   "All good? Let's continue!": "Все хорошо? Продолжаем!",
   "All selected": "All selected",
@@ -103,6 +104,7 @@
   "Current wallet": "Текущий кошелек",
   "Custom": "Пользовательский",
   "Custom network settings saved.": "Пользовательские настройки сети сохранены.",
+  "Custom proxy": "Custom proxy",
   "Dark": "Dark",
   "Default address": "Адрес по умолчанию",
   "Default address for sending transactions.": "Адрес по умолчанию для отправки транзакций.",
