--- a/locales/tr-TR/translation.json
+++ b/locales/tr-TR/translation.json
@@ -25,6 +25,7 @@
   "Alephium": "Alephium",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium projesinin herhangi bir şekilde cüzdanınıza erişme şansı yoktur. Cüzdanınız yalnızca sizin sahipliğinizdedir.",
   "Alephium Logo": "Alephium Logosu",
+  "Alephium's services": "Alephium's services",
   "all": "tümü",
   "All good? Let's continue!": "Herşey yolunda mı? Haydi devam edelim!",
   "All selected": "All selected",
@@ -103,6 +104,7 @@
   "Current wallet": "Şu anki cüzdan",
   "Custom": "Uyarlama",
   "Custom network settings saved.": "Uyarlanmış ağ ayarları kaydedildi.",
+  "Custom proxy": "Custom proxy",
   "Dark": "Dark",
   "Default address": "Varsayılan adres",
   "Default address for sending transactions.": "İşlemlerin gönderileceği varsayılan adres.",
