--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -25,6 +25,7 @@
   "Alephium": "Alephium",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium hat keinen Zugriff auf Ihre Wallet. \nSie sind der einzige Besitzer.",
   "Alephium Logo": "Alephium Logo",
+  "Alephium's services": "Alephium's services",
   "all": "alle",
   "All good? Let's continue!": "Alles in Ordnung? Machen wir weiter!",
   "All selected": "All selected",
@@ -103,6 +104,7 @@
   "Current wallet": "Aktuelle Wallet",
   "Custom": "Benutzerdefiniert",
   "Custom network settings saved.": "Benutzerdefinierte Netzwerkeinstellungen gespeichert.",
+  "Custom proxy": "Custom proxy",
   "Dark": "Dunkles",
   "Default address": "Standardadresse",
   "Default address for sending transactions.": "Standardadresse für das Senden von Transaktionen.",
