--- a/locales/id-ID/translation.json
+++ b/locales/id-ID/translation.json
@@ -25,6 +25,7 @@
   "Alephium": "Alephium",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium tidak memiliki akses ke dompet Anda.\nAnda adalah satu-satunya pemilik.",
   "Alephium Logo": " Logo Alephium",
+  "Alephium's services": "Alephium's services",
   "all": "semua",
   "All good? Let's continue!": "Semua baik? Ayo lanjutkan!",
   "All selected": "All selected",
@@ -103,6 +104,7 @@
   "Current wallet": "Dompet saat ini",
   "Custom": "Khusus",
   "Custom network settings saved.": "Pengaturan khusus jaringan telah disimpan.",
+  "Custom proxy": "Custom proxy",
   "Dark": "Dark",
   "Default address": "Alamat bawaan",
   "Default address for sending transactions.": "Alamat default untuk mengirim transaksi.",
