--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -25,6 +25,7 @@
   "Alephium": "Alephium",
   "Alephium doesn't have access to your wallet.\nYou are the only owner.": "Alephium hoàn toàn không có quyền truy cập vào ví của bạn.\nBạn là chủ sở hữu duy nhất.",
   "Alephium Logo": "Logo của Alephium",
+  "Alephium's services": "Alephium's services",
   "all": "tất cả",
   "All good? Let's continue!": "Mọi thứ đã sẳn sàng? Hãy tiếp tục!",
   "All selected": "All selected",
@@ -103,6 +104,7 @@
   "Current wallet": "Ví hiện tại",
   "Custom": "Tuỳ chỉnh",
   "Custom network settings saved.": "Tuỳ chỉnh mạng đã lưu.",
+  "Custom proxy": "Custom proxy",
   "Dark": "Dark",
   "Default address": "Địa chỉ mặc định",
   "Default address for sending transactions.": "Địa chỉ ví mặc định để thực hiện các giao dịch.",
