Use NetworkSettings to store proxy settings

--- a/locales/bg-BG/translation.json
+++ b/locales/bg-BG/translation.json
@@ -104,7 +104,7 @@
   "Current wallet": "Текущ портфейл",
   "Custom": "Персонализиран",
   "Custom network settings saved.": "Потребителските настройки на мрежата са запазени.",
-  "Custom proxy": "Custom proxy",
+  "Custom proxy (SOCKS5)": "Custom proxy (SOCKS5)",
   "Dark": "Dark",
   "Default address": "Адрес по подразбиране",
   "Default address for sending transactions.": "Адрес по подразбиране за изпращане на транзакции.",
