--- a/locales/de-DE/translation.json
+++ b/locales/de-DE/translation.json
@@ -104,7 +104,7 @@
   "Current wallet": "Aktuelle Wallet",
   "Custom": "Benutzerdefiniert",
   "Custom network settings saved.": "Benutzerdefinierte Netzwerkeinstellungen gespeichert.",
-  "Custom proxy": "Custom proxy",
+  "Custom proxy (SOCKS5)": "Custom proxy (SOCKS5)",
   "Dark": "Dunkles",
   "Default address": "Standardadresse",
   "Default address for sending transactions.": "Standardadresse für das Senden von Transaktionen.",
