--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -102,7 +102,7 @@
   "Current wallet": "Current wallet",
   "Custom": "Custom",
   "Custom network settings saved.": "Custom network settings saved.",
-  "Custom proxy": "Custom proxy",
+  "Custom proxy (SOCKS5)": "Custom proxy (SOCKS5)",
   "Dark": "Dark",
   "Default address": "Default address",
   "Default address for sending transactions.": "Default address for sending transactions.",
