--- a/locales/es-ES/translation.json
+++ b/locales/es-ES/translation.json
@@ -104,7 +104,7 @@
   "Current wallet": "Monedero actual",
   "Custom": "Personalizar",
   "Custom network settings saved.": "Configuración de red personalizada guardada.",
-  "Custom proxy": "Custom proxy",
+  "Custom proxy (SOCKS5)": "Custom proxy (SOCKS5)",
   "Dark": "Dark",
   "Default address": "Dirección predeterminada",
   "Default address for sending transactions.": "Dirección predeterminada para el envío de transacciones.",
