--- a/locales/fr-FR/translation.json
+++ b/locales/fr-FR/translation.json
@@ -104,7 +104,7 @@
   "Current wallet": "Portefeuille actif",
   "Custom": "Personnalisé",
   "Custom network settings saved.": "Paramètres de réseau enregistrés.",
-  "Custom proxy": "Custom proxy",
+  "Custom proxy (SOCKS5)": "Custom proxy (SOCKS5)",
   "Dark": "Sombre",
   "Default address": "Adresse par défaut",
   "Default address for sending transactions.": "Adresse par défaut pour effectuer des transactions.",
