--- a/locales/id-ID/translation.json
+++ b/locales/id-ID/translation.json
@@ -104,7 +104,7 @@
   "Current wallet": "Dompet saat ini",
   "Custom": "Khusus",
   "Custom network settings saved.": "Pengaturan khusus jaringan telah disimpan.",
-  "Custom proxy": "Custom proxy",
+  "Custom proxy (SOCKS5)": "Custom proxy (SOCKS5)",
   "Dark": "Dark",
   "Default address": "Alamat bawaan",
   "Default address for sending transactions.": "Alamat default untuk mengirim transaksi.",
