--- a/locales/pt-PT/translation.json
+++ b/locales/pt-PT/translation.json
@@ -104,7 +104,7 @@
   "Current wallet": "Carteira atual",
   "Custom": "Personalizar",
   "Custom network settings saved.": "Definições de rede personalizadas guardadas.",
-  "Custom proxy": "Custom proxy",
+  "Custom proxy (SOCKS5)": "Custom proxy (SOCKS5)",
   "Dark": "Dark",
   "Default address": "Endereço predefinido",
   "Default address for sending transactions.": "Endereço por defeito para o envio de transações.",
