--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -104,7 +104,7 @@
   "Current wallet": "Ví hiện tại",
   "Custom": "Tuỳ chỉnh",
   "Custom network settings saved.": "Tuỳ chỉnh mạng đã lưu.",
-  "Custom proxy": "Custom proxy",
+  "Custom proxy (SOCKS5)": "Custom proxy (SOCKS5)",
   "Dark": "Dark",
   "Default address": "Địa chỉ mặc định",
   "Default address for sending transactions.": "Địa chỉ ví mặc định để thực hiện các giao dịch.",
