--- a/locales/ru-RU/translation.json
+++ b/locales/ru-RU/translation.json
@@ -104,7 +104,7 @@
   "Current wallet": "Текущий кошелек",
   "Custom": "Пользовательский",
   "Custom network settings saved.": "Пользовательские настройки сети сохранены.",
-  "Custom proxy": "Custom proxy",
+  "Custom proxy (SOCKS5)": "Custom proxy (SOCKS5)",
   "Dark": "Dark",
   "Default address": "Адрес по умолчанию",
   "Default address for sending transactions.": "Адрес по умолчанию для отправки транзакций.",
