--- a/locales/tr-TR/translation.json
+++ b/locales/tr-TR/translation.json
@@ -104,7 +104,7 @@
   "Current wallet": "Şu anki cüzdan",
   "Custom": "Uyarlama",
   "Custom network settings saved.": "Uyarlanmış ağ ayarları kaydedildi.",
-  "Custom proxy": "Custom proxy",
+  "Custom proxy (SOCKS5)": "Custom proxy (SOCKS5)",
   "Dark": "Dark",
   "Default address": "Varsayılan adres",
   "Default address for sending transactions.": "İşlemlerin gönderileceği varsayılan adres.",
