update VI for v2.0.1 & correct meanings in contexts

--- a/locales/vi-VN/translation.json
+++ b/locales/vi-VN/translation.json
@@ -230,7 +230,7 @@
   "Call contract": "Call contract",
   "Deploy contract": "Deploy contract",
   "Issue token amount": "Phát hành số lượng token",
-  "Tokens to issue (optional)": "Các tokens để phát hành (tuỳ chọn)",
+  "Tokens to issue (optional)": "Tuỳ chỉnh các token",
   "Gas": "Gas",
   "Review": "Xem lại",
   "The group of the selected address ({{ addressGroup }}) does not match the group required by WalletConnect ({{ walletConnectGroup }})": "Nhóm hiện đang được chọn ({{ addressGroup }}) không trùng khớp với nhóm được yêu cầu bởi WalletConnect ({{ walletConnectGroup }})",
@@ -282,7 +282,7 @@
   "Latest transactions": "Giao dịch gần nhất",
   "Addresses": "Địa chỉ ví",
   "Your addresses": "Các địa chỉ ví của bạn",
-  "Developer tools": "Developer tools",
+  "Developer tools": "Công cụ dành cho nhà phát triển",
   "Enable developer tools": "Kích hoạt developer tools",
   "Features for developers only": "Các tính năng chỉ dành cho nhà phát triển",
   "Transfers": "Các giao dịch",
@@ -294,9 +294,9 @@
   "Value today": "Giá trị hôm nay",
   "NFTs": "NFTs",
   "Coming soon!": "Sắp ra mắt!",
-  "Address tokens": "Address tokens",
-  "Address NFTs": "Address NFTs",
-  "Address transactions": "Address transactions",
+  "Address tokens": "Địa chỉ các token",
+  "Address NFTs": "Địa chỉ các NFT",
+  "Address transactions": "Địa chỉ các giao dịch",
   "Asset": "Tài sản",
   "Assets": "Các tài sản",
   "Add asset": "Thêm tài sản",
